# module_8

./: config.ini  connection_to_db.py  consumer.py  docker-compose.yaml  find.py  model.py  models.py  produser.py  pyproject.toml  seed.py
quote_spider/quote_spider/: items.py  middlewares.py  pipelines.py  settings.py
quote_spider/quote_spider/spiders/: authors.json  main.py
