[tool.poetry]
name = "module-8"
version = "0.1.0"
description = ""
authors = ["Nikukusik <nikukusika@hmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
faker = "^26.0.0"
rabbitmq = "^0.2.0"
pika = "^1.3.2"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
